initial project version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,28 +15,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.B10"
         android:usesCleartextTraffic="true">
-<!--        <activity-->
-<!--            android:name=".Home_Activity2"-->
-<!--            android:exported="false" />-->
+        <activity
+            android:name=".Home_Activity2"
+            android:exported="false" />
         <activity
             android:name=".AnimalActivity"
             android:exported="false" />
         <activity
-            android:name=".Register_And_Login.RegisterActivity"
+            android:name=".sign.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".ContentActivity.HomeActivity"
+            android:name=".content.HomeActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
 
         <activity
-            android:name=".Register_And_Login.LoginActivity"
+            android:name=".sign.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
