--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.appcompat:appcompat-resources:1.1.0-rc01'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0'
 
 
 
